[package]
name = "serenity-testbot"
version = "0.1.0"
authors = ["TSP_Panda <chris.barwick16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
version = "0.8"